--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,14 +1,17 @@
+
+/* background-color: rgb(13 148 136 / var(--tw-bg-opacity)); */
 .main-container{
-    height: 100vh;
-    @apply w-full flex overflow-hidden
+    @apply w-full flex relative
 }
 .header-container{
+    height: 100vh;
     height: auto;
-    @apply w-96 bg-neutral-900 flex flex-col sticky 
+    @apply w-96 bg-neutral-900 flex flex-col max-h-full 
 }
 
 .home-container{
-    @apply w-full h-full bg-neutral-950 
+    overflow: auto;
+    @apply w-full h-full bg-neutral-950
 }
 
 .content-container{
@@ -17,4 +20,13 @@
     width: 50rem;
     margin: 0 auto;
    
+}
+
+.link {
+    @apply block py-2 px-3 text-white bg-teal-600 rounded md:bg-transparent md:text-teal-600 md:p-0
+     dark:text-white md:dark:text-teal-600
+}
+.link1{
+    @apply block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0
+     dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent
 }
